@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1875 2003/12/14 11:28:15 druzus Exp $
+ * $Id: ChangeLog,v 1.1880 2003/12/15 02:35:36 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-15 05:02 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/vm/thread.c
+    ! fixed windows compilation
 
 2003-12-15 03:30 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/vm/arrays.c
